--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,2 @@
 PORT=8000
-MONGODB_URI=mongodb+srv://iamsouvikmaity2002_db_user:<souvikmaity@2002>@cluster0.uomj1hg.mongodb.net
+MONGODB_URI=mongodb+srv://iamsouvikmaity2002_db_user:souvik123@cluster0.uomj1hg.mongodb.net
