--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,7 @@
 PORT=8000
 MONGODB_URI=mongodb+srv://iamsouvikmaity2002_db_user:souvik123@cluster0.uomj1hg.mongodb.net
 CORS_ORIGIN=*
+ACCESS_TOKEN_SECRET=backend
+ACCESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_SECRET=backend
+REFRESH_TOKEN_EXPIRY=10d
