--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,7 @@ ACCESS_TOKEN_SECRET=backend
 ACCESS_TOKEN_EXPIRY=1d
 REFRESH_TOKEN_SECRET=backend
 REFRESH_TOKEN_EXPIRY=10d
+
+CLOUDINARY_CLOUD_NAME=dbzulqeik
+CLOUDINARY_API_KEY=132442489868333
+CLOUDINARY_API_SECRET=ssZVOvd435WpzOPXAgbhF9fqy4A
